# cpp-calf

./: .gitignore  README.md  TODO.md
include/calf/: debugging.hpp  logging.hpp  message_queue.hpp  non_blocking_queue.hpp  singleton.hpp  worker_service.hpp
include/calf/graphics/directx/: d2d1.hpp  d3d11.hpp  dcomp.hpp  dwrite.hpp  dxgi.hpp
include/calf/platform/: windows.hpp
include/calf/platform/linux/: debugging.hpp  file_io.hpp  networking.hpp  posix.hpp
include/calf/platform/windows/: com.hpp  debugging.hpp  file_io.hpp  gdi.hpp  input.hpp  kernel_object.hpp  logging.hpp  networking.hpp  process.hpp  string.hpp  string_convert.hpp  system_services.hpp  thread_message.hpp  thread_message_queue.hpp  win32.hpp  win32_debug.hpp  win32_log.hpp  window.hpp
samples/base/: CMakeLists.txt  base.cc
samples/file/: CMakeLists.txt  file.cpp
samples/ipc/: CMakeLists.txt  ipc_client.cc  ipc_server.cc
samples/linux/: CMakeLists.txt  linux_sample.cpp
samples/log/: CMakeLists.txt  log_sample.cpp
samples/tcp/: CMakeLists.txt  tcp_client.cpp  tcp_server.cpp
samples/window/: CMakeLists.txt  window_sample.cpp
